cmake_minimum_required(VERSION 3.28)
project(boj)

set(CMAKE_CXX_STANDARD 17)

#        4161.cpp
#        12015.cpp

add_executable(boj
#        13977.cpp
        #        2162.cpp
        #        3190.cpp
        #        15686.cpp
        #        2618.cpp
        #        28215.cpp
        #        1168.cpp
        #        12899.cpp
        #        6549.cpp
        #        1725.cpp
        #        2357.cpp
        #        11505.cpp
        #        2042.cpp
        #        11404.cpp
        #        11657.cpp
        #        13549.cpp
        #        1504.cpp
        #        1753.cpp
        #        4195.cpp
        #        1976.cpp
        #        1717.cpp
        #        1991.cpp
        #        1987.cpp
        #        1967.cpp
        #        13172.cpp
        #        1932.cpp
        #        1629.cpp
        #        2565.cpp
        #        14002.cpp
        #        "프로그래머스/가장 먼 노드.cpp"
        #        "프로그래머스/정수 삼각형.cpp"
        #        "프로그래머스/K번째수.cpp"
        #        "프로그래머스/소수 만들기.cpp"
        #        "프로그래머스/하노이의 탑.cpp"
        #        "프로그래머스/올바른 괄호.cpp"
        #        "프로그래머스/점 찍기.cpp"
        #        "프로그래머스/전력망을 둘로 나누기.py"
        #        9251.cpp
        #        "프로그래머스/유사 칸토어 비트열.cpp"
        #        17386.cpp
        #        25308.cpp
        #        11758.cpp
        #        11478.cpp
        #        11055.cpp
        #        2263.cpp
        #        7662.cpp
        #        11049.cpp
        #        13976.cpp
        #        2133.cpp
        #        11444.cpp
        #        10830.cpp
        #        11401.cpp
        #        5639.cpp
        #        1915.cpp
        #        19577.cpp
        #        11054.cpp
        #        11053.cpp
        #        1654.cpp
        #        2108.cpp
        #        1929.cpp
        #        14888.cpp
        #        9663.cpp
        #        15652.cpp
        #        11729.cpp
        #        2447.cpp
        #        4779.cpp
        #        24060.cpp
        #        24511.cpp
        #        2346.cpp
        #        28279.cpp
        #        11866.cpp
        #        28278.cpp
        #        10773.cpp
        #        18258.cpp
)
